# SVT-AV1

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: actions.yml  macos.yml  rebase.yml  svt-av1.yml
Docs/: svt-av1_encoder_user_guide.md
Source/App/: EbAppConfig.c  EbAppMain.c
Source/Lib/Common/: CMakeLists.txt
Source/Lib/Common/ASM_AVX2/: EbHighbdIntraPrediction_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  EbPictureOperators_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  pickrst_avx2.c  pickrst_avx2.h  selfguided_avx2.c  variance_avx2.c
Source/Lib/Common/ASM_AVX512/: EbHighbdIntraPrediction_AVX512.c  EbPictureOperators_Intrinsic_AVX512.c  pickrst_avx512.c
Source/Lib/Common/ASM_SSE2/: EbAvcStyleMcp_Intrinsic_SSE2.c  EbCombinedAveragingSAD_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbDeblockingFilter_Intrinsic_SSE2.c  EbMeSadCalculation_Intrinsic_SSE2.c  highbd_intrapred_sse2.c  (+5 more)
Source/Lib/Common/Codec/: CMakeLists.txt  EbAvcStyleMcp.h  EbComputeMean.h  EbComputeSAD.h  EbDeblockingFilter.h  EbIntraPrediction.h  EbMcp.h  EbMeSadCalculation.h  EbPackUnPack.h  EbPictureAnalysisProcess.c  EbPictureOperators.h  EbTemporalFiltering.c  EbTransforms.h
Source/Lib/Decoder/: CMakeLists.txt
Source/Lib/Encoder/: CMakeLists.txt
ffmpeg_plugin/: README.md
test/: AVCStyleMcpTest.cc  CMakeLists.txt  DeblockTest.cc  InvTxfm2dAsmTest.cc  MotionEstimationTest.cc  PackUnPackTest.cc  PictureOperatorTest.cc  RestorationPickTest.cc  SadTest.cc  SpatialFullDistortionTest.cc  TemporalFilterTest.cc  TransposeTest.cc  convolve_2d_test.cc
(+2 files in other folders)
